# atividades-inteli

./: README.md  package-lock.json
Modulo_10/pond1/: README.md  app.py
Modulo_10/pond2/: .gitignore  README.md  docker-compose.yaml
Modulo_10/pond3/: README.md  docker-compose.yaml
Modulo_10/pond4/: README.md  docker-compose.yaml
Modulo_10/prova1/: README.md  api-collection.json  app.py  requirements.txt
Modulo_10/prova2/: README.md  docker-compose.yaml
Modulo_11/pond1_8bitALU/: ALU.dig  README.md  main.dig
Modulo_6/semana4_gazebo_coordinates/: setup.cfg
Modulo_6/semana5_crack_predict/: README.md
Modulo_6/semana7_image_saver/: index.html  main.ipynb
Modulo_7/[OLD]ponderada2_aws/: app.js  package-lock.json  package.json
Modulo_7/ponderada1_docker/: README.md  dockerfile
Modulo_7/ponderada2_pokedex/: README.md  docker-compose.prod.yaml
Modulo_7/ponderada3_cloudAI/: .dockerignore  Dockerfile  README.md  app.py  functions.py  notebook.ipynb
Modulo_8/ponderada2_navigation/ros2_ws/src/navigation/: package.xml  setup.py
Modulo_8/ponderada2_navigation/ros2_ws/src/navigation/launch/: map_launch.xml  nav_launch.xml
Modulo_8/ponderada2_navigation/ros2_ws/src/navigation/navigation/: map_jobs.py  map_saver.py  nav_navigate.py  nav_startup.py
prova1-ROS_turtles_v2/: README.md  main.py
prova2-video_recognizer/: README.md  main.ipynb
semana1-ROS_turtles/: README.md  ROS_turtles.py
semana4_gazebo_coordinates/: README.md  package.xml  setup.py
semana5_crack_predict/: README.md  main.ipynb
semana7_image_saver/: README.md  main.ipynb  server.py
(+184 files in other folders)
